# AI-Agent-Playground

./: .gitignore
agent_development/: README.md  pyproject.toml  report.md
agent_development/ai_news/: pyproject.toml
agent_development/ai_news/src/ai_news/: crew.py  main.py
agent_development/src/agent_development/: crew.py  main.py
ai_news/src/ai_news/: crew.py  main.py  news.md
ai_news/src/ai_news/config/: agents.yaml  tasks.yaml
ai_news/src/ai_news/news/: 27_news_article.md  32_news_article.md  4_news_article.md  55_news_article.md  77_news_article.md  95_news_article.md  news.md
minutes_meeting/: README.md  pyproject.toml
minutes_meeting/meeting_minutes/: action_items.txt  sentiment.txt  summary.txt
minutes_meeting/src/minutes_meeting/: main.py
minutes_meeting/src/minutes_meeting/crews/meeting_minutes_crew/: meeting_minutes_crew.py
poem_flow/src/poem_flow/: main.py
poem_flow/src/poem_flow/crews/poem_crew/: poem_crew.py
