[project]
name = "agent_development"
version = "0.1.0"
description = "agent_development using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
agent_development = "agent_development.main:run"
run_crew = "agent_development.main:run"
train = "agent_development.main:train"
replay = "agent_development.main:replay"
test = "agent_development.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
